--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "webpack": "^2.0",
     "babel-core": "^6.0",
     "babel-loader": "^7.0",
     "babel-preset-env": "*",
-    "babel-preset-react": "*"
+    "babel-preset-react": "*",
+    "webpack": "^2.0"
   },
   "scripts": {
     "build": "webpack",
